# ChangeLog for dev-perl/TimeDate
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/TimeDate/ChangeLog,v 1.25 2008/02/23 17:09:14 jer Exp $

  23 Feb 2008; Jeroen Roovers <jer@gentoo.org> TimeDate-1.16.ebuild:
  Stable for HPPA.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org> TimeDate-1.16.ebuild:
  Version bump, thanks seemant

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org> TimeDate-1.16.ebuild:
  Adding perl dep; fixed DEPEND

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> TimeDate-1.16.ebuild:
  Add ~x86-fbsd keyword.

  27 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -TimeDate-1.11-r1.ebuild, -TimeDate-1.11-r2.ebuild, TimeDate-1.16.ebuild:
  Cleaning up

  02 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> TimeDate-1.16.ebuild:
  Stable on ppc.

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  14 Dec 2004; Markus Rothe <corsair@gentoo.org> TimeDate-1.16.ebuild:
  Stable on ppc64

  01 Nov 2004; Markus Rothe <corsair@gentoo.org> TimeDate-1.16.ebuild:
  Marked ~ppc64; bug #66216

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org> TimeDate-1.16.ebuild:
  Stable on amd64.

  04 Jul 2004; Bryan Østergaard <kloeri@gentoo.org> TimeDate-1.16.ebuild:
  Stable on alpha.

  03 Mar 2004; Gustavo Zacarias <gustavoz@gentoo.org> TimeDate-1.16.ebuild:
  stable on sparc

*TimeDate-1.16 (27 Feb 2004)

  27 Feb 2004; Michael Cummings <mcummings@gentoo.org> TimeDate-1.16.ebuild:
  New version on CPAN, bug 36256 is now closed

*TimeDate-1.11-r2 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*TimeDate-1.11-r1 (6 May 2002)
