@@ -1,4 +1,6 @@
 DIST TimeDate-1.16.tar.gz 22366 RMD160 9486bd25768dd82a6597409a57a2a9ec34973f70 SHA1 36875a6cb20585d0589e2fccade04fae6e0db372 SHA256 7942ef0181b5828563a1b98a0a801a75bc0102773a1c942a09ac1d0b9fba6cb3
+DIST TimeDate-1.17.tar.gz 28466 RMD160 5a05a596fcf963c42334dfc215bd2e3d3be85e72 SHA1 24abc16f2c2c93825a5eb61e103b1fccb50475f8 SHA256 9ac33afd3e2e266c17c1e4de00a3a72bc34d123aa63ebe27934893582ed99076
 EBUILD TimeDate-1.16.ebuild 548 RMD160 fa952498b1ffe5426d34b31d740855c3f76de33b SHA1 74420267a7251b1aecc5577c097de408bbe5a8d6 SHA256 639da0a9b6b8bafbe09b347bf581e80a8957ad818009fb92387ce23f0cd11b36
-MISC ChangeLog 2316 RMD160 e46be9841b575423d1897aba405a298c1af147a0 SHA1 a75fd190752c6d832e4707cca36482e3785ae054 SHA256 d7985ce0574df483ae408824fc4bd89e9cf894d345de0af73fabed28beaa0d11
+EBUILD TimeDate-1.17.ebuild 443 RMD160 5620aacdd5207280d69606e43163fc1b89dbcf9f SHA1 f8ad9d31395049e58c311cf231583977d1156da2 SHA256 ebdc03af18b16d390ddfbf85ad3783975cb93e7790a25e17297bdd04986e1265
+MISC ChangeLog 2434 RMD160 3d6b3ea845935630f560d9382629b51c73ceba08 SHA1 ea852bcf2c763987659b3ca62c3b8a63557adb2d SHA256 a53df5bf6755b57f1ba3f74a27994efd2f8f4b806a0efa1a551d7e3614a3a4f2
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
