@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/TimeDate/TimeDate-1.17.ebuild,v 1.1 2009/09/20 10:23:52 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=GBARR
+inherit perl-module
+
+DESCRIPTION="A Date/Time Parsing Perl Module"
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+SRC_TEST=do
